[gd_scene load_steps=45 format=2]

[ext_resource path="res://assets/Characters/Enemies/Bosses/Necromancer.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemies/Boss/Necromancer/Necromancer.gd" type="Script" id=2]
[ext_resource path="res://scenes/Enemies/Boss/Necromancer/backspell.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfx/shade2.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/shade14.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 12 )

[sub_resource type="Animation" id=2]
length = 0.001

[sub_resource type="Animation" id=48]
resource_name = "castSpell001"
step = 0.0714286
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143, 0.428571, 0.5, 0.571429, 0.642857, 0.714286, 0.785714, 0.857143 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.714286 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spell_a_invoque001"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "castSpellA"
step = 0.0714286
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143, 0.428571, 0.5, 0.571429, 0.642857, 0.714286, 0.785714, 0.857143 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.642857 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spell_a_invoque003"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "castSpellB"
step = 0.0714286
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143, 0.428571, 0.5, 0.571429, 0.642857, 0.714286, 0.785714, 0.857143 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63 ]
}

[sub_resource type="Animation" id=5]
resource_name = "castSpellC"
loop = true
step = 0.0588235
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0588235, 0.117647, 0.176471, 0.235294, 0.294118, 0.352941, 0.411765, 0.470588, 0.529412, 0.588235, 0.647059, 0.705882, 0.764706, 0.823529, 0.882353 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.118, 0.470588 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_spell_c_kill_invoque003"
}, {
"args": [  ],
"method": "_spell_c_new_shield"
} ]
}

[sub_resource type="Animation" id=44]
resource_name = "castSpellD"
loop = true
step = 0.0588235
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0588235, 0.117647, 0.176471, 0.235294, 0.294118, 0.352941, 0.411765, 0.470588, 0.529412, 0.588235, 0.647059, 0.705882, 0.764706, 0.823529, 0.882353 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83 ]
}

[sub_resource type="Animation" id=6]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 102, 103, 104, 105, 106, 107, 108, 109, 110 ]
}

[sub_resource type="Animation" id=7]
resource_name = "hurt"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 85, 86, 87, 86, 87, 88, 89 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
loop = true
step = 0.0625
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0625, 0.1875, 0.3125, 0.4375, 0.5625, 0.6875, 0.8125, 0.9375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23, 24 ]
}

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "castSpell001"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "castSpellA"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "castSpellB"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "castSpellC"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "castSpellD"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=10]
states/castSpell001/node = SubResource( 49 )
states/castSpell001/position = Vector2( 817.362, 47.4444 )
states/castSpellA/node = SubResource( 13 )
states/castSpellA/position = Vector2( 390, 40.3333 )
states/castSpellB/node = SubResource( 14 )
states/castSpellB/position = Vector2( 576, 47.4444 )
states/castSpellC/node = SubResource( 15 )
states/castSpellC/position = Vector2( 174.362, 190.333 )
states/castSpellD/node = SubResource( 45 )
states/castSpellD/position = Vector2( 174.362, 34.7037 )
states/dead/node = SubResource( 16 )
states/dead/position = Vector2( 901.667, 119.214 )
states/hurt/node = SubResource( 17 )
states/hurt/position = Vector2( 704.333, 118.852 )
states/idle/node = SubResource( 33 )
states/idle/position = Vector2( 534.556, 128.333 )
states/walk/node = SubResource( 19 )
states/walk/position = Vector2( 535, 212.185 )
transitions = [ "hurt", "dead", SubResource( 28 ), "walk", "hurt", SubResource( 31 ), "hurt", "walk", SubResource( 32 ), "castSpellA", "idle", SubResource( 34 ), "idle", "castSpellA", SubResource( 35 ), "idle", "castSpellB", SubResource( 36 ), "castSpellB", "idle", SubResource( 37 ), "idle", "castSpellC", SubResource( 38 ), "castSpellC", "idle", SubResource( 39 ), "idle", "hurt", SubResource( 40 ), "hurt", "idle", SubResource( 41 ), "walk", "idle", SubResource( 42 ), "idle", "walk", SubResource( 43 ), "castSpellD", "idle", SubResource( 46 ), "idle", "castSpellD", SubResource( 47 ), "idle", "castSpell001", SubResource( 50 ), "castSpell001", "idle", SubResource( 51 ) ]
graph_offset = Vector2( 57.3617, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=11]

[node name="Necromancer" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.2 )
collision_layer = 2
collision_mask = 528
script = ExtResource( 2 )

[node name="backspell" parent="." instance=ExtResource( 3 )]
scale = Vector2( 1.8, 1.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -24 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 1 )
hframes = 17
vframes = 7
frame = 34

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/castSpell001 = SubResource( 48 )
anims/castSpellA = SubResource( 3 )
anims/castSpellB = SubResource( 4 )
anims/castSpellC = SubResource( 5 )
anims/castSpellD = SubResource( 44 )
anims/dead = SubResource( 6 )
anims/hurt = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/walk = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 10 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 11 )

[node name="Rays" type="Node2D" parent="."]

[node name="BackFlip" type="RayCast2D" parent="Rays"]
position = Vector2( -8, 8 )
enabled = true
cast_to = Vector2( -64, 56 )

[node name="Flip" type="RayCast2D" parent="Rays"]
position = Vector2( 6, 0 )
enabled = true
cast_to = Vector2( 256, 0 )
collision_mask = 1040

[node name="Init" type="RayCast2D" parent="Rays"]
enabled = true
cast_to = Vector2( 128, 152 )

[node name="TweenPurpleSkull" type="Tween" parent="."]

[node name="SwordHurt01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
pitch_scale = 0.8

[node name="SwordHurt02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
